# conditioner

./: .gitignore  CMakeLists.txt  conditioner.cpp  conditioner.h  control.cpp  control.h  imitationdialog.cpp  imitationdialog.h  info.cpp  info.h  loader.cpp  loader.h  mainwindow.cpp  mainwindow.h  misc.cpp  misc.h  resource.qrc  styles.cpp  styles.h  temperature.cpp  temperature.h  valueslider.cpp  valueslider.h
